* Enhanced the :func:`resilient_circuits.is_this_a_selftest() <resilient_circuits.helpers.is_this_a_selftest>` method
  to check if any Component has been instantiated in a resilient-circuits instance running ``selftest``. Example:

  .. code-block::

    from resilient_circuits.helpers import is_this_a_selftest

    if is_this_a_selftest(self):
        # Do nothing...

**2022-07: version 45.1**

* Bug fix to avoid ``@app_function`` Components firing on all channels leading to Functions being invoked multiple times

**2022-05: version 45.0**

* Added new config ``trap_exception`` and if set to ``True`` a Function's exception will be ignored with the error sent as a Status Message
  and a default payload returned like below, allowing the Workflow or Playbook to continue

  .. code-block::

    {
      "success": False,
      "reason": "Error message"
    }
* Added a custom header for all requests from ``resilient-circuits`` that will include the current version of the library: ``Resilient-Circuits-Version: 45.0.0``
* Better handling of errors if an app's ``selftest`` is unimplemented

**2022-04: version 44.1**

* Move Jinja template management functions to ``resilient-lib`` while
  keeping backward compatibility here

**2022-02: version 44.0**

* Ensure ``tests/`` is not included in packaged code
* Bump ``Jinja2`` to ``~=3.0`` for Python ``>=3.6``
* Officially support ``Python 3.9``

**2022-01: version 43.1**

* Bug fix for ``selftest``

**2021-11: version 43.0**

* Formatted Sphinx documentation and hosted it at https://ibm.biz/soar-python-docs

**2021-11: version 42.3**

* No major changes. Just bumping build number to coincide with other builds

**2021-10: version 42.2**

* No major changes. Just bumping build number to coincide with other builds

**2021-08: version 42.1**

* No major changes. Just bumping build number to coincide with other builds

**2021-08: version 42.0**
