@@ -381,6 +381,7 @@ class Actions(ResilientComponent):
         self._configure_opts(opts)
         self.max_retry_count = int(opts.get("stomp_max_retries")) # default from app.py:DEFAULT_STOMP_MAX_RETRIES
         self.stomp_timeout = int(opts.get("stomp_timeout", SUBSCRIBE_TO_QUEUES_TIMEOUT))
+        self.heartbeat_timeouts = []
 
         timer_internal = int(opts['resilient'].get("stomp_timer_interval", RETRY_TIMER_INTERVAL))
 
@@ -450,6 +451,10 @@ class Actions(ResilientComponent):
     def on_stomp_connected(self):
         """Client has connected to the STOMP server"""
         LOG.info("STOMP connected.")
+
+        # Once STOMP has connected, we want to empty the heartbeat_timeouts list
+        self.heartbeat_timeouts = []
+
         # Stop retrying the failed deliveries from previous session
         # We'll ack them right away if they are re-delivered
         # TODO: We should age these out of here at some point. 24 hours?
@@ -459,10 +464,37 @@ class Actions(ResilientComponent):
             self._resilient_ack_delivery_failures[key]["from_prev_conn"] = True
 
     @handler("HeartbeatTimeout")
-    def on_heartbeat_timeout(self):
-        """Heartbeat timed out from the STOMP server"""
-        LOG.error("Reconnecting after STOMP heartbeat timeout.")
-        # Disconnect and Reconnect
+    def on_heartbeat_timeout(self, event):
+        """
+        Handler for a HeartbeatTimeout event
+
+        Checks to see if the 'heartbeat_timeout_threshold' config is set. Keeps
+        track of HBs in a list. Each HB has a ts value. If the difference
+        between the first and current HB's ts is greater than the config,
+        resilient-circuits exits with an exit code of 34
+        """
+
+        heartbeat_timeout_threshold = self.opts.get(constants.APP_CONFIG_HEARTBEAT_TIMEOUT_THRESHOLD)
+
+        if heartbeat_timeout_threshold:
+
+            self.heartbeat_timeouts.append(event)
+
+            if len(self.heartbeat_timeouts) > 1:
+
+                self.heartbeat_timeouts = helpers.filter_heartbeat_timeout_events(self.heartbeat_timeouts)
+
+                delta = int(self.heartbeat_timeouts[-1].ts - self.heartbeat_timeouts[0].ts)
+
+                if delta > heartbeat_timeout_threshold:
+                    LOG.error("'%s' is set to '%ss' and '%ss' have passed since the first HeartbeatTimeout, exiting...",
+                              constants.APP_CONFIG_HEARTBEAT_TIMEOUT_THRESHOLD, heartbeat_timeout_threshold, delta)
+
+                    sys.exit(constants.EXIT_STOMP_HEARTBEAT_TIMEOUT)
+
+        LOG.error("Trying to reconnect after STOMP HeartbeatTimeout")
+
+        # Fire a Disconnect event to Reconnect
         self.fire(Disconnect(flush=False, reconnect=True))
 
     @handler("OnStompError")
